--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "postcss": "^7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-infinite-scroller": "^1.2.4",
+    "react-infinite-scroller": "^1.2.6",
+    "react-router-dom": "^6.4.0",
     "react-scripts": "4.0.3",
     "react-table": "^7.7.0",
     "styled-components": "^5.3.1",
